# LiDARProcessor

./: .gitattributes  CMakeLists.txt  README.md  conanfile.py  imGui.ini  run_debug.bat  run_release.bat
architecture/: architecture.md
data/: VehicleProfileCustom.ini  VehicleProfileFusion.ini  VisualizerSettings.ini  testCase.pcap
mapping/: LidarVirtualSensorMapping.cpp  LidarVirtualSensorMapping.hpp
reader/include/: LidarScan.hpp  VelodynePCAPReader.hpp
reader/src/: VelodynePCAPReader.cpp
shaders/: point.fs  point.vs
test/: main.cpp
unitTests/: mapping_tests.cpp  reader_tests.cpp  velodyne_tests.cpp
velodyne/include/engine/: LidarEngine.hpp
velodyne/include/sensors/: BaseLidarSensor.hpp  LidarFactory.hpp  VelodyneLidar.hpp
velodyne/src/engine/: LidarEngine.cpp
velodyne/src/sensors/: LidarFactory.cpp  VelodyneLidar.cpp
visualization/: IVisualizer.hpp  Shader.cpp  Visualizer.cpp  Visualizer.hpp  imgui.ini
